# webstack-django-sorting

./: .gitignore  CHANGELOG.md  CHANGES  CHANGES.md  CHANGES.txt  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  python-publish.yml  test.yml
django_sorting/: middleware.py
django_sorting/templatetags/: sorting_tags.py
src/testproj/: README.md  manage.py  pyproject.toml  requirements.txt
src/testproj/testproj/: asgi.py  settings.py  urls.py  wsgi.py
src/testproj/testproj/static/css/: style.css
src/testproj/testproj/testapp/: admin.py  models.py  tests.py  views.py
src/testproj/testproj/testapp/fixtures/: secretfiles.json
src/testproj/testproj/testapp/jinja2/: env.py  secret_list.jinja2  secret_list_css_classes.jinja2
src/testproj/testproj/testapp/migrations/: 0001_initial.py
src/testproj/testproj/testapp/templates/: home.html  secret_list_css_classes.html  secret_list_nulls_last.html  secret_list_some_desc.html
src/webstack_django_sorting/: common.py  jinja2_globals.py  settings.py
src/webstack_django_sorting/templatetags/: sorting_tags.py
testproj/: README  README.md  manage.py  requirements.txt
testproj/testproj/: settings.py  urls.py  wsgi.py
testproj/testproj/static/css/: style.css
testproj/testproj/testapp/: models.py  tests.py  views.py
testproj/testproj/testapp/fixtures/: initial_data.json
testproj/testproj/testapp/jinja2/: env.py  secret_list.jinja2  secret_list_nulls_first.jinja2  secret_list_nulls_last.jinja2  secret_list_some_desc.jinja2
testproj/testproj/testapp/migrations/: 0001_initial.py
testproj/testproj/testapp/templates/: secret_list.html  secret_list_nulls_first.html  secret_list_nulls_last.html  secret_list_some_desc.html  test_index.html
webstack_django_sorting/: common.py  jinja2_globals.py  middleware.py  settings.py  util.py  utils.py
webstack_django_sorting/templatetags/: common.py  jinja2_globals.py  settings.py  sorting_tags.py
