[project]
name = "webstack-django-sorting"
version = "3.2.0"
description = "Easy sorting of tables with Django"
authors = [
    { name = "Karim A. (aka Directeur)", email = "directeur@gmail.com" },
    { name = "Eric Florenzano", email = "floguy@gmail.com" },
    { name = "Stéphane Raimbault", email = "stephane.raimbault@webstack.fr" },
    { name = "S. Kossouho", email = "artscoop93@gmail.com" },
    { name = "Joffrey M.", email = "joffrey.mander@polyconseil.fr" },
]
maintainers = [
    { name = "Stéphane Raimbault", email = "stephane.raimbault@webstack.fr" },
]
dependencies = ["Django>=5.0, <7.0"]
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
keywords = ["django", "sorting", "table"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[project.optional-dependencies]
jinja2 = ["jinja2>=3.1.6"]

[project.urls]
repository = "https://github.com/webstack/webstack-django-sorting.git"
changelog = "https://github.com/webstack/webstack-django-sorting/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/webstack/webstack-django-sorting/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "coverage>=7.13.4",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "jinja2>=3.1.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/webstack_django_sorting"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["django.*", "markupsafe.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testproj.settings"
pythonpath = ["src/testproj"]
