[metadata]
name = webstack-django-sorting
version = 2.3.1
author = Stéphane Raimbault
author_email = stephane.raimbault@webstack.fr
description = Easy sorting of tables with Django
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/webstack/webstack-django-sorting
project_urls =
	Bug Tracker = https://github.com/webstack/webstack-django-sorting/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Intended Audience :: Developers
	Natural Language :: English
	Framework :: Django
	Environment :: Web Environment

[options]
packages = find:
python_requires = >=3.6
install_requires =
	Django>=3.0,<6.0
