[project]
name = "testproj"
version = "0.1.0"
description = "Test project of webstack-django-sorting"
authors = [
    { name = "Stéphane Raimbault", email = "stephane.raimbault@webstack.fr" },
]
dependencies = ["django>=5.1", "jinja2>=3.1.4"]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
virtual = true
managed = true
dev-dependencies = []

[tool.rye.workspace]
members = ["webstack-django-sorting*"]
