[project]
name = "testproj"
version = "0.1.0"
description = "Test project of webstack-django-sorting"
authors = [
    { name = "Stéphane Raimbault", email = "stephane.raimbault@webstack.fr" },
]
dependencies = ["django>=6.0.2", "jinja2>=3.1.6", "webstack-django-sorting"]
readme = "README.md"
requires-python = ">= 3.14"

[tool.uv]
package = false

[dependency-groups]
dev = []

[tool.uv.sources]
webstack-django-sorting = { path = "../..", editable = true }
